dynadly, tremolo_env, loopers shrink, multiloop actuator

--- a/manual/manual.html
+++ b/manual/manual.html
@@ -117,6 +117,13 @@ used to modulate loop speed/pitch.</li>
 <li>to matrix silder send the output of the looper to the input of the matrix</li>  
 </ul>
 
+<h4>Multiloop Actuator</h4>
+<ul>
+<li>Multiloop Actuator button is used to command the Play/Rec bouttons of several loopers with one gesture</li>  
+<li>Loop1, Loop2 and Loop3 buttons to select what loop to command</li>
+</ul>
+
+
 <h4>Freez(ers)</h4>
 <ul>
 <li>drop down menu select the source signal to be freezed</li>
